--- a/Aditya portfolio/index.html
+++ b/Aditya portfolio/index.html
@@ -8,7 +8,8 @@
 	<link rel="icon" href="img/aboutAdi1.jpg">
 	<!---custom css link---->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+	<!--  icon -->
+	<script src="https://kit.fontawesome.com/379f35fea7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -70,20 +71,20 @@
 		<div class="Skills-content">
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-mobile-alt'></i>
+					<i class="fa-solid fa-code"></i>
 				</div>
 				<h3>Web Design</h3>
 			</div>
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-code-alt'></i>
+					<i class="fa-solid fa-code"></i>
 				</div>
 				<h3>React</h3>
 			</div>
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt'></i>
+					<i class="fa-solid fa-code"></i>
 				</div>
 				<h3>HTML5 & CSS3</h3>
 
@@ -91,14 +92,14 @@
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt'></i>
+					<i class="fa-solid fa-code"></i>
 				</div>
 				<h3>JavaScript</h3>
 
 			</div>
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt'></i>
+					<i class="fa-solid fa-code"></i>
 				</div>
 				<h3>Bootstrap</h3>
 				<!-- <a href="#" class="btn">Read More</a> -->
@@ -118,7 +119,8 @@
 				<div class="layer">
 					<h1>Calculator</h1>
 					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
-					<a href="https://github.com/AdiBhatnagar98/Calculator.git"> <i class='bx bx-link-external'></i></a>
+					<a href="https://github.com/AdiBhatnagar98/Calculator.git"> <i
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 
@@ -126,8 +128,9 @@
 				<img src="img/project2.jpg">
 				<div class="layer">
 					<h1>TO-DO Lst</h1>
-					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
-					<a href="https://github.com/AdiBhatnagar98/TO-DO-List.git"> <i class='bx bx-link-external'></i></a>
+					<p>Check out the projects.</p>
+					<a href="https://github.com/AdiBhatnagar98/TO-DO-List.git"> <i
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 
@@ -135,9 +138,9 @@
 				<img src="img/project3.jpg">
 				<div class="layer">
 					<h1>Netflix Ui Clone</h1>
-					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+					<p>Check out the projects.</p>
 					<a href="https://github.com/AdiBhatnagar98/Netflix-UI-Clone.git"> <i
-							class='bx bx-link-external'></i></a>
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 
@@ -145,8 +148,9 @@
 				<img src="img/project1.jpg">
 				<div class="layer">
 					<h1>Personal Portfolio</h1>
-					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
-					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i class='bx bx-link-external'></i></a>
+					<p>Check out the projects.</p>
+					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 
@@ -154,8 +158,9 @@
 				<img src="img/project2.jpg">
 				<div class="layer">
 					<h1>Temprature Converter</h1>
-					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
-					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i class='bx bx-link-external'></i></a>
+					<p>Check out the projects.</p>
+					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 
@@ -163,8 +168,9 @@
 				<img src="img/project3.jpg">
 				<div class="layer">
 					<h1>Coffee Shop Landing Page</h1>
-					<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
-					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i class='bx bx-link-external'></i></a>
+					<p>Check out the projects.</p>
+					<a href="https://github.com/AdiBhatnagar98/OIBSIP.git"> <i
+							class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 		</div>
@@ -184,10 +190,10 @@
 			</div>
 
 			<div class="contact-icons">
-				<a href="#"><i class='bx bxl-facebook'></i></a>
-				<a href="#"><i class='bx bxl-twitter'></i></a>
-				<a href="#"><i class='bx bxl-instagram-alt'></i></a>
-				<a href="#"><i class='bx bxl-youtube'></i></a>
+				<a href="https://www.linkedin.com/in/aditya-bhatnagar01/"><i class="fa-brands fa-linkedin"></i></a>
+				<a href="https://github.com/AdiBhatnagar98"><i class="fa-brands fa-github"></i></a>
+				<a href="#"><i class="fa-brands fa-twitter"></i></a>
+				<a href="#"><i class="fa-brands fa-youtube"></i></a>
 			</div>
 
 		</div>
