--- a/Aditya portfolio/index.html
+++ b/Aditya portfolio/index.html
@@ -198,13 +198,15 @@
 
 		</div>
 		<div class="contact-form">
-			<form action="">
-				<input type="name" placeholder="Your Name " required>
-				<input type="email" placeholder="Your Email " required>
-				<input type="number" placeholder="your Mobile Number" required>
+			<form action="https://api.web3forms.com/submit" method="POST">
+				<input type="hidden" name="access_key" value="abab392d-a9d0-48ac-833b-0d477ecde08c">
+				<input type="name" placeholder="Your Name " name="name" required>
+				<input type="email" placeholder="Your Email " name="email" required>
+				<input type="number" placeholder="your Mobile Number" name="number" required>
 				<textarea name="" id="" cols="35" rows="10" placeholder="How Can I Help You " required></textarea>
 				<input type="submit" value="Send Message" class="submit" required>
 			</form>
+
 
 		</div>
 	</section>
